# net_device_mapping

./: .gitignore  Cargo.toml  README.md  build.rs  create_bridge.sh  remove_bridge.sh
ebpf/: fork_monitor.bpf.c
samples/: clone_netns.c  listen_netlink.c  setns_netns.c  unshare_netns.c
src/: lib.rs  mount_monitor.rs  net_device.rs  netns.rs  netns_tracker.rs  nsid_monitor.rs  proc_tracker.rs  syscall_monitor.rs
src/util/: libmount_monitor.rs  line_count_writer.rs  mod.rs  oneshot_recv.rs  stoppable_stream.rs
