[package]
name = "net_device_mapping"
version = "0.1.0"
edition = "2024"

[dependencies]
errno = "0.3.11"
futures = "0.3.31"
glob = "0.3.2"
lazy_static = "1.5.0"
libc = "0.2.172"
mountinfo = "0.2.0"
netlink-proto = "0.11.5"
rtnetlink = "0.16.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
