[package]
name = "net_device_mapping"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-oneshot = "0.5.9"
aya = "0.13.1"
ctrlc = "3.4.6"
errno = "0.3.11"
futures = "0.3.31"
glob = "0.3.2"
lazy_static = "1.5.0"
libc = "0.2.172"
mountinfo = "0.2.0"
netlink-proto = "0.11.5"
rtnetlink = "0.16.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
