[package]
name = "net_device_mapping"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-oneshot = "0.5.9"
async-thread = "0.1.2"
aya = "0.13.1"
crossterm = "0.29.0"
ctrlc = "3.4.6"
errno = "0.3.11"
futures = "0.3.31"
glob = "0.3.2"
itertools = "0.14.0"
lazy_static = "1.5.0"
libc = "0.2.172"
libmount = "0.1.15"
libmount-sys = "0.1.1"
mountinfo = "0.2.0"
netlink-proto = "0.11.5"
rtnetlink = "0.16.0"
socket2 = { version = "0.5.9", features = ["all"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
cargo_metadata = "0.19.2"
